[tool.poetry]
name = "'youtube'"
version = "0.1.0"
description = ""
authors = ["Olga Yarosh <O_ll_y_a@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.80.0"
isodate = "^0.6.1"
python-youtube = "^0.9.0"
pytube3 = "^9.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
