[tool.poetry]
name = "'youtube'"
version = "0.1.0"
description = ""
authors = ["Olga Yarosh <O_ll_y_a@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
isodate = "^0.6.1"
python-youtube = "^0.9.0"
pytube3 = "^9.6.4"
google-api-python-client = "^2.83.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
